cambios en privacy

--- a/DevOps/DevOps/Views/Home/Privacy.cshtml
+++ b/DevOps/DevOps/Views/Home/Privacy.cshtml
@@ -4,3 +4,10 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
+
+<!-- 🔹 Animación añadida -->
+<div class="animation-container">
+    <div class="circle"></div>
+    <div class="circle delay1"></div>
+    <div class="circle delay2"></div>
+</div>
