--- a/DevOps/DevOps/Views/Home/Index.cshtml
+++ b/DevOps/DevOps/Views/Home/Index.cshtml
@@ -24,6 +24,7 @@
         <li>Kenneth Oshima</li>
         <li>Yoselin Porras</li>
         <li>Valentina Rojas</li>
+        <li>´Tio de Valentina Rojas</li>
     </ul>
 </div>
 
